Fixing the gradient on safari

--- a/css/diary-view.css
+++ b/css/diary-view.css
@@ -596,6 +596,13 @@ textarea:focus {
     background: white;
     z-index: 500;
     white-space: nowrap;
+background: -moz-linear-gradient(top,  rgba(255,253,245,1) 1%, rgba(255,253,245,0.49) 51%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(255,253,245,1) 1%,rgba(255,253,245,0.49) 51%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(255,253,245,1) 1%,rgba(255,253,245,0.49) 51%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fffdf5', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+
+}
+.blankclass {
     background: -moz-linear-gradient(top,  rgba(255,253,245,1) 32%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top,  rgba(255,253,245,1) 32%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(255,253,245,1) 32%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
